Make "mockalloc" an optional feature.
Those tests interfere with regular tests and benchmarks,
because they install a custom global allocator.

Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -162,6 +162,9 @@ jobs:
     - name: Test
       run: cargo test
 
+    - name: Test (no leaks)
+      run: cargo test --features mockalloc
+
     - name: Format (rustfmt)
       run: cargo fmt -- --check
 
@@ -226,6 +229,9 @@ jobs:
 
     - name: Test
       run: cargo test
+
+    - name: Test (no leaks)
+      run: cargo test --features mockalloc
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -292,6 +298,9 @@ jobs:
 
     - name: Test
       run: cargo test
+
+    - name: Test (no leaks)
+      run: cargo test --features mockalloc
 
     - name: Bench
       run: cargo bench
